compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__sized_char_wrong_type.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var _ : char(1.0)"

---
"_"@(FileId(1), 4..5) [Declared]: ref_mut char_n Fixed(Unevaluated(LibraryId(0), BodyId(0)))
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 13..16: wrong type for compile-time expression
