compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__sized_char_wrong_type_bool.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var _ : char(true)"

---
ty_nodes:
    TypeId(HirId(Idx::<HirNode>(1))) TyRef(Error)
def_kinds:
    DefId(0) Var(TyRef(Error))
error at 13..17: wrong type for compile-time expression
| note for 13..17: expected integer value, found boolean value
