compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__sized_char_zero_sized.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var _ : char(0)"

---
ty_nodes:
    Idx::<Type>(0) TyRef(Error)
def_kinds:
    DefId(0) Var(TyRef(Error))
error at 13..14: invalid character count size
| note for 13..14: computed count is 0
| info for 13..14: valid sizes are between 1 to 32767
