compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__sized_string_literal.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var _ : string(1)"

---
ty_nodes:
    Idx::<Type>(0) TyRef(StringN(Fixed(1)))
def_kinds:
    DefId(0) Var(TyRef(StringN(Fixed(1))))
