compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__sized_string_over_sized.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var _ : string(512)"

---
"_"@(FileId(1), 4..5) [Declared]: ref_mut string_n Fixed(Unevaluated(LibraryId(0), BodyId(0)))
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 15..18: invalid character count size
| error in file FileId(1) for 15..18: computed count is 512
| info: valid sizes are between 1 to 255
