compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__sized_string_simple_expr.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var _ : string(1 - 1 * 1 + 2)"

---
ty_nodes:
    TypeId(HirId(Idx::<HirNode>(7))) TyRef(StringN(Fixed(2)))
def_kinds:
    DefId(0) Var(TyRef(StringN(Fixed(2))))
